se crea carpeta js y html se referencia a carpeta

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Calculo de notas por Js, ver en consola</h1>
-    <script src="promedio.js"></script>  <!-- Aquí cargamos el archivo JS -->
+    <script src="js/promedio.js"></script>  <!-- Aquí cargamos el archivo JS -->
 </body>
 </html>
